test/kubernetestest/webhooktest.yaml
# test webhook yaml that doesn't use helm/cabundle
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: radius-system
      path: /validate-radius-dev-v1alpha3-application
  failurePolicy: Fail
  name: application-validation.radius.dev
  rules:
  - apiGroups:
    - radius.dev
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - applications
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: radius-system
      path: /validate-radius-dev-v1alpha3-resource
  failurePolicy: Fail
  name: resource-validation.radius.dev
  rules:
  - apiGroups:
    - radius.dev
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - containers
    - dapriodaprhttproutes
    - mongodbcomponents
    - rediscomponents
    - grpcroutes
    - dapriopubsubtopiccomponents
    - rabbitmqcomponents
    - httproutes
    - dapriostatestorecomponents
    - dapriosecretstorecomponents
    - extendercomponents
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: webhook-service
      namespace: radius-system
      path: /validate-bicep-dev-v1alpha3-deploymenttemplate
  failurePolicy: Fail
  name: deploymenttemplate-validation.bicep.dev
  rules:
  - apiGroups:
    - bicep.dev
    apiVersions:
    - v1alpha3
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - deploymenttemplates
  sideEffects: None
